feat(vm): gasPerToken is now Ratio32
closes #1962
